--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,12 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+dist-electron
 *.local
+
+# Electron build output
+release/
+web-offline/
 
 # Editor directories and files
 .vscode/*
