--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@ dist-ssr
 dist-electron
 *.local
 
+# Environment variables (contains API keys)
+.env
+.env.local
+.env.*.local
+
 # Electron build output
 release/
 web-offline/
