Migrate to Vercel with secure API handling - Move from GitHub Pages to Vercel hosting- Implement serverless function for secure API key handling- Add GitHub Pages redirection to new Vercel URL- Remove exposed API keys from repository- Update environment variable configuration

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,18 @@
-# Gemini API Key
-# Google AI Studio에서 API 키를 발급받으세요: https://aistudio.google.com/app/apikey
+# ⚠️ Vercel 마이그레이션 후 환경 변수 설정 방법
 #
-# 사용 방법:
-# 1. 이 파일을 .env로 복사하세요: cp .env.example .env
-# 2. 아래 your_api_key_here를 실제 API 키로 교체하세요
-# 3. .env 파일은 절대 Git에 커밋하지 마세요 (이미 .gitignore에 추가됨)
-
-VITE_GEMINI_API_KEY=your_api_key_here
+# 이 프로젝트는 이제 Vercel에서 호스팅되며, API 키는 서버 측에서 안전하게 관리됩니다.
+#
+# 로컬 개발 환경에서는 Vercel CLI를 사용하세요:
+# 1. npm install -g vercel
+# 2. vercel login
+# 3. vercel link
+# 4. vercel dev  (로컬 개발 서버 실행 - 자동으로 Vercel 환경 변수 사용)
+#
+# Vercel 대시보드에서 환경 변수 설정:
+# https://vercel.com/your-project/settings/environment-variables
+#
+# 필요한 환경 변수:
+# - GEMINI_API_KEY: Google AI Studio에서 발급받은 Gemini API 키
+#   (https://aistudio.google.com/app/apikey)
+#
+# 주의: VITE_ 접두사를 사용하지 마세요 (서버 전용 변수)
