--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "npm run build:web",
-  "outputDirectory": "docs",
+  "outputDirectory": "dist",
   "framework": "vite",
   "installCommand": "npm install"
 }
